--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.READ_CONTACTS"/>
+    <uses-permission android:name="android.permission.WRITE_CONTACTS"/>
 
 
     <application
@@ -33,6 +35,7 @@
             android:screenOrientation="portrait"/>
         <activity android:name=".activities.UserGoogleInfoActivity"
             android:screenOrientation="portrait"/>
+        <activity android:name=".activities.ContactActivity" />
     </application>
 
 </manifest>
