--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,5 +35,5 @@ dependencies {
     compile 'com.squareup.okhttp3:logging-interceptor:3.3.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'io.realm:android-adapters:1.4.0'
-
+    compile 'com.github.thorbenprimke:realm-searchview:0.9.6'
 }
